--- a/main.css
+++ b/main.css
@@ -19,6 +19,7 @@ body {
 .container .content .list input[type="checkbox"] {
 	width: 50px;
 	height: 50px;
+	cursor: pointer;
 	-webkit-appearance:none;
 }
 
